fabrication/kubernetes/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: maze-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: nginx
          image: maze-web:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/templates
              readOnly: true
          resources:
            limits:
              cpu: '0.5'
              memory: 128Mi
            requests:
              cpu: '0.1'
              memory: 64Mi
      volumes:
        - name: nginx-config
          configMap:
            name: web-nginx-config
