fabrication/kubernetes/base/director-core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: director-core
  namespace: maze-prod
spec:
  selector:
    app: director-core
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 9090
      targetPort: 9090
  type: ClusterIP
