fabrication/kubernetes/base/the-forge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-forge
  namespace: maze-prod
spec:
  selector:
    app: the-forge
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 9090
      targetPort: 9090
  type: ClusterIP
