fabrication/kubernetes/base/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: maze
  annotations:
    # 如果有 nginx ingress controller
    # nginx.ingress.kubernetes.io/websocket-services: "web"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
    - host: maze.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
